--- a/portfolio.html
+++ b/portfolio.html
@@ -129,46 +129,64 @@
                         </div>
                         <div class="project-info">
                             <h3>Color Cascade</h3>
-                            <p>A dynamic color gradient generator that creates beautiful cascading color patterns. Features include:
-                                <ul>
-                                    <li>Real-time color gradient generation</li>
-                                    <li>Customizable color schemes</li>
-                                    <li>Responsive design</li>
-                                    <li>Interactive color picker</li>
-                                </ul>
-                            </p>
+                            <p>A dynamic color-changing application that creates beautiful color transitions with interactive buttons.</p>
                             <div class="project-links">
-                                <a href="https://yash-vardhan-rajpoot.github.io/Color-Cascade/" class="btn" target="_blank">View Live</a>
-                                <a href="https://github.com/Yash-Vardhan-Rajpoot/Color-Cascade" class="btn" target="_blank">GitHub</a>
+                                <a href="https://github.com/Yash-Vardhan-Rajpoot/Color-Cascade" target="_blank" class="project-link">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                                <a href="https://yash-vardhan-rajpoot.github.io/Color-Cascade/" target="_blank" class="project-link">
+                                    <i class="fas fa-external-link-alt"></i> Live Demo
+                                </a>
                             </div>
                             <div class="project-tech">
-                                <span>HTML5</span>
-                                <span>CSS3</span>
+                                <span>HTML</span>
+                                <span>CSS</span>
                                 <span>JavaScript</span>
                             </div>
                         </div>
                     </div>
+
                     <div class="project-card">
                         <div class="project-image">
                             <img src="https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?w=800&auto=format&fit=crop&q=60" alt="Goal Grid Project">
                         </div>
                         <div class="project-info">
                             <h3>Goal Grid</h3>
-                            <p>A JavaScript-based goal tracking application that helps users organize and manage their objectives. Features include:
-                                <ul>
-                                    <li>Goal creation and management</li>
-                                    <li>Progress tracking</li>
-                                    <li>Local storage integration</li>
-                                    <li>Responsive grid layout</li>
-                                </ul>
-                            </p>
+                            <p>A task management application that helps users organize and track their goals efficiently.</p>
                             <div class="project-links">
-                                <a href="https://yash-vardhan-rajpoot.github.io/GoalGrid/" class="btn" target="_blank">View Live</a>
-                                <a href="https://github.com/Yash-Vardhan-Rajpoot/GoalGrid" class="btn" target="_blank">GitHub</a>
+                                <a href="https://github.com/Yash-Vardhan-Rajpoot/GoalGrid" target="_blank" class="project-link">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                                <a href="https://yash-vardhan-rajpoot.github.io/GoalGrid/" target="_blank" class="project-link">
+                                    <i class="fas fa-external-link-alt"></i> Live Demo
+                                </a>
                             </div>
                             <div class="project-tech">
-                                <span>HTML5</span>
-                                <span>CSS3</span>
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>JavaScript</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-image">
+                            <img src="https://images.unsplash.com/photo-1557821552-17105176677c?w=800&auto=format&fit=crop&q=60" alt="Portfolio Project">
+                        </div>
+                        <div class="project-info">
+                            <h3>My Portfolio</h3>
+                            <p>A modern, responsive portfolio website showcasing my projects, skills, and professional journey.</p>
+                            <div class="project-links">
+                                <a href="https://github.com/Yash-Vardhan-Rajpoot/MyPortfolio" target="_blank" class="project-link">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                                <a href="https://yash-vardhan-rajpoot.github.io/MyPortfolio/" target="_blank" class="project-link">
+                                    <i class="fas fa-external-link-alt"></i> Live Demo
+                                </a>
+                            </div>
+                            <div class="project-tech">
+                                <span>HTML</span>
+                                <span>CSS</span>
                                 <span>JavaScript</span>
                             </div>
                         </div>
